[#28] fix: 메시지 조회 순서 변경